WD-34910 - Fix dropdown overflow hidden bug in releases UI (#5741)
* WD-34910 - Fix dropdown overflow hidden bug in releases UI

* WD-34910 - Fix linting

* WD-34910 - Fix copilot comment

* WD-34910 - Fix wrong color

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -343,6 +343,10 @@
     font-size: 0.8rem;
     line-height: 0.8rem;
     position: absolute;
+
+    .is-dark & {
+      color: $color-light;
+    }
   }
 
   .p-releases-table__branches {
@@ -399,6 +403,11 @@
 
     .p-tooltip {
       display: block;
+    }
+
+    &.opens-up {
+      bottom: 100%;
+      top: auto;
     }
   }
 
@@ -795,6 +804,10 @@
 
     color: $color-dark;
 
+    .is-dark & {
+      color: $color-light;
+    }
+
     &:hover {
       background: transparent;
       cursor: default;
@@ -809,6 +822,10 @@
     margin-bottom: $sp-x-small;
     margin-top: $sp-x-small;
     white-space: normal;
+
+    .is-dark & {
+      color: $color-light;
+    }
   }
 
   .p-tooltip__group {
